result item action menu css changes

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -808,120 +808,6 @@ html {
   margin: 0 auto;
 }
 
-.search_result_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-
-.search_result_container-filterContainer {
-  position: relative;
-  margin-right: 0.8rem;
-  width: 20%;
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear;
-}
-
-.search_result_container-filterContainer .filters .ant-collapse-item {
-  opacity: 1;
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear;
-}
-
-.search_result_container-filterContainer .filters .filters_collapse_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  border-radius: 1rem;
-  opacity: 0;
-  -webkit-transition: all 0.2s linear;
-  transition: all 0.2s linear;
-}
-
-.search_result_container-filterContainer .filters .filters_collapse_container_iconContainer {
-  width: 100%;
-  height: 5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.search_result_container-filterContainer .filters .filters_collapse_container_textContainer {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.search_result_container-filterContainer .filters .filters_collapse_container_textContainer-text {
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  text-orientation: upright;
-  font-size: 2rem;
-  letter-spacing: 1rem;
-  text-transform: uppercase;
-}
-
-.search_result_container-resultContainer {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.search_result_container-HideShowFilter {
-  position: absolute;
-  top: 50%;
-  right: -1.6rem;
-  z-index: 100;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.hideFilter.search_result_container-filterContainer {
-  width: 5%;
-}
-
-.hideFilter.search_result_container-filterContainer .filters .ant-collapse-item {
-  opacity: 0;
-}
-
-.hideFilter.search_result_container-filterContainer .filters .filters_collapse_container {
-  opacity: 1;
-}
-
 .search_result {
   margin-bottom: 1rem;
 }
@@ -1127,6 +1013,159 @@ html {
   color: #5550FF !important;
 }
 
+.search_result_action_menu .ant-dropdown-menu {
+  padding: 0.5rem 1.5rem;
+  border-radius: 1rem;
+}
+
+.search_result_action_menu_item {
+  padding: 0.5rem 0;
+}
+
+.search_result_action_menu_item:hover {
+  background: none;
+}
+
+.search_result_action_menu_item .ant-dropdown-menu-title-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search_result_action_menu_item_iconContainer {
+  width: 3.2rem;
+  height: 3.2rem;
+  background: #ddd;
+  border-radius: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 1rem;
+}
+
+.search_result_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.search_result_container-filterContainer {
+  position: relative;
+  margin-right: 0.8rem;
+  width: 20%;
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.search_result_container-filterContainer .filters .ant-collapse-item {
+  opacity: 1;
+  -webkit-transition: all 0.5s linear;
+  transition: all 0.5s linear;
+}
+
+.search_result_container-filterContainer .filters .filters_collapse_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
+  opacity: 0;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.search_result_container-filterContainer .filters .filters_collapse_container_iconContainer {
+  width: 100%;
+  height: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search_result_container-filterContainer .filters .filters_collapse_container_textContainer {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search_result_container-filterContainer .filters .filters_collapse_container_textContainer-text {
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  text-orientation: upright;
+  font-size: 2rem;
+  letter-spacing: 1rem;
+  text-transform: uppercase;
+}
+
+.search_result_container-resultContainer {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.search_result_container-HideShowFilter {
+  position: absolute;
+  top: 50%;
+  right: -1.6rem;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hideFilter.search_result_container-filterContainer {
+  width: 5%;
+}
+
+.hideFilter.search_result_container-filterContainer .filters .ant-collapse-item {
+  opacity: 0;
+}
+
+.hideFilter.search_result_container-filterContainer .filters .filters_collapse_container {
+  opacity: 1;
+}
+
 .tag {
   cursor: pointer;
 }
@@ -1253,6 +1292,7 @@ html {
 
 .swiper {
   padding-right: 5rem;
+  z-index: 0;
 }
 
 .swiper-button-next:after,
