--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -1,85 +1,3 @@
-.search_result_container {
-  display: flex;
-  align-items: flex-start;
-
-  &-filterContainer {
-    position: relative;
-    margin-right: 0.8rem;
-    width: 20%;
-    transition: all 0.5s linear;
-
-    .filters .ant-collapse-item {
-      opacity: 1;
-      transition: all 0.5s linear;
-    }
-
-    .filters .filters_collapse_container {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 0;
-      height: 100%;
-      width: 100%;
-      border-radius: 1rem;
-      opacity: 0;
-      transition: all 0.2s linear;
-
-      &_iconContainer {
-        width: 100%;
-        height: 5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        &-icon {
-        }
-      }
-
-      &_textContainer {
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &-text {
-          writing-mode: vertical-rl;
-          text-orientation: upright;
-          font-size: 2rem;
-          letter-spacing: 1rem;
-          text-transform: uppercase;
-        }
-      }
-    }
-  }
-
-  &-resultContainer {
-    flex: 1;
-  }
-
-  &-HideShowFilter {
-    position: absolute;
-    top: 50%;
-    right: -1.6rem;
-    z-index: 100;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-.hideFilter.search_result_container {
-  &-filterContainer {
-    width: 5%;
-
-    .filters .ant-collapse-item {
-      opacity: 0;
-    }
-
-    .filters .filters_collapse_container {
-      opacity: 1;
-    }
-  }
-}
-
 .search_result {
   margin-bottom: 1rem;
 
@@ -241,6 +159,122 @@
       &-link {
         color: $color-5 !important;
       }
+    }
+  }
+
+  &_action_menu {
+    .ant-dropdown-menu {
+      padding: 0.5rem 1.5rem;
+      border-radius: 1rem;
+    }
+
+    &_item {
+      padding: 0.5rem 0;
+
+      &:hover{
+        background: none;
+      }
+
+      .ant-dropdown-menu-title-content {
+        display: flex;
+        align-items: center;
+
+        &-title {
+        }
+      }
+
+      &_iconContainer {
+        width: 3.2rem;
+        height: 3.2rem;
+        background: #ddd;
+        border-radius: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 1rem;
+      }
+    }
+  }
+
+  &_container {
+    display: flex;
+    align-items: flex-start;
+
+    &-filterContainer {
+      position: relative;
+      margin-right: 0.8rem;
+      width: 20%;
+      transition: all 0.5s linear;
+
+      .filters .ant-collapse-item {
+        opacity: 1;
+        transition: all 0.5s linear;
+      }
+
+      .filters .filters_collapse_container {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        border-radius: 1rem;
+        opacity: 0;
+        transition: all 0.2s linear;
+
+        &_iconContainer {
+          width: 100%;
+          height: 5rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          &-icon {
+          }
+        }
+
+        &_textContainer {
+          flex: 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          &-text {
+            writing-mode: vertical-rl;
+            text-orientation: upright;
+            font-size: 2rem;
+            letter-spacing: 1rem;
+            text-transform: uppercase;
+          }
+        }
+      }
+    }
+
+    &-resultContainer {
+      flex: 1;
+    }
+
+    &-HideShowFilter {
+      position: absolute;
+      top: 50%;
+      right: -1.6rem;
+      z-index: 100;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+.hideFilter.search_result_container {
+  &-filterContainer {
+    width: 5%;
+
+    .filters .ant-collapse-item {
+      opacity: 0;
+    }
+
+    .filters .filters_collapse_container {
+      opacity: 1;
     }
   }
 }
