--- a/src/scss/3.component/_mainHeader.scss
+++ b/src/scss/3.component/_mainHeader.scss
@@ -26,7 +26,7 @@
         &-divider {
           height: 3.5rem;
           border-right: 0.2rem solid $color-7;
-          margin: 0px 1rem;
+          margin-right:  1rem;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -38,7 +38,6 @@
       }
 
       &_menuContainer {
-        flex: 1;
         display: flex;
         justify-content: center;
 
@@ -69,7 +68,7 @@
         }
 
         &_menu {
-          margin-right: 8rem;
+          margin-right: 4rem;
           display: flex;
           align-items: center;
 
@@ -88,10 +87,10 @@
       }
 
       &_userContainer {
-        width: 10rem;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
+        
         &-user {
           width: 1.8rem;
           height: 1.8rem;
@@ -103,6 +102,48 @@
           justify-content: center;
           color: rgb(255, 255, 255);
           margin-left: 3rem;
+        }
+      }
+
+      &_searchcontainer {
+        // margin-bottom: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+  
+        &_inputBox {
+          width: 90%;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+  
+          &-input {
+            padding: 1.2rem 8rem 1.2rem 1.5rem;
+            border-radius: 3rem;
+          }
+        }
+  
+        &_actionBox {
+          position: absolute;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          right: 1.5rem;
+          color: $color-9;
+  
+          &-search {
+            width: 3.5rem;
+            height: 3.5rem;
+            background-color: $color-9;
+            border-radius: 2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-left: 1rem;
+            color: $color-white;
+          }
         }
       }
     }
@@ -133,47 +174,10 @@
       }
     }
 
-    &_searchcontainer {
-      margin-bottom: 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
 
-      &_inputBox {
-        width: 35%;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &-input {
-          padding: 1.2rem 8rem 1.2rem 1.5rem;
-          border-radius: 3rem;
-        }
-      }
-
-      &_actionBox {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        right: 1.5rem;
-        color: $color-9;
-
-        &-search {
-          width: 3.5rem;
-          height: 3.5rem;
-          background-color: $color-9;
-          border-radius: 2rem;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin-left: 1rem;
-          color: $color-white;
-        }
-      }
-    }
   }
+
+
   &_searchlist_container {
     width: 95%;
     top: 90%;
@@ -181,8 +185,13 @@
     position: absolute;
     z-index: 999;
 
+    &-scrollContainer{
+      max-height: 30rem;
+      padding: 1.5rem !important;
+    }
+
     .ant-card-body {
-      padding: 1rem 2rem;
+      padding: 0;
     }
 
     &_item {
