--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "./3.component/CaseStudySection";
 @import "./3.component/swiper";
 @import "./3.component/RoundCornerModal";
+@import "./3.component/MainMenu";
 
 
 @import "./5.pages/home";
