--- a/src/scss/3.component/_CaseStudySection.scss
+++ b/src/scss/3.component/_CaseStudySection.scss
@@ -36,13 +36,13 @@
     &_textContainer {
       display: flex;
       flex-direction: column;
-      
+
       &-title {
         font-size: 1.4rem;
         color: $color-9;
         font-weight: 600;
       }
-      &-subtitle{
+      &-subtitle {
         font-size: 1.2rem;
         color: #999999;
       }
@@ -71,7 +71,7 @@
 
     &_contentcontainer {
       &-text {
-        color: $color-12;
+        color: rgba($color: $color-black, $alpha: 0.8);
         margin-bottom: 0.2rem !important;
       }
 
