--- a/src/scss/3.component/_SearchResult.scss
+++ b/src/scss/3.component/_SearchResult.scss
@@ -155,12 +155,12 @@
 
     &_contentcontainer {
       padding: 1rem;
-      background-color: $color-11;
+      // background-color: $color-11;
       border-radius: 1rem;
       font-size: 1.5rem;
 
       &-text {
-        color: $color-12;
+        color:  rgba($color: $color-black, $alpha: .8);
         margin-bottom: 0.2rem !important;
       }
 
@@ -216,6 +216,7 @@
 
       .filters .ant-collapse-item {
         opacity: 1;
+    
         transition: all 0.5s linear;
       }
 
@@ -225,7 +226,7 @@
         position: absolute;
         top: 0;
         height: 100%;
-        width: 100%;
+        width: 0%;
         border-radius: 1rem;
         opacity: 0;
         transition: all 0.2s linear;
@@ -283,6 +284,8 @@
 
     .filters .filters_collapse_container {
       opacity: 1;
+      width: 100%;
+      height: 100%;
     }
   }
 }
