--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,9 +13,25 @@
 @import "./3.component/SearchResult";
 @import "./3.component/TechnologyTags";
 @import "./3.component/CaseStudySection";
-@import "./3.component/swiper";
 @import "./3.component/RoundCornerModal";
 @import "./3.component/MainMenu";
-
+@import "./3.component/DropDownMenuItem";
 
 @import "./5.pages/home";
+// @import "./5.pages/login";
+
+@import "./7.vendors/ant-divider";
+@import "./7.vendors/checkbox";
+@import "./7.vendors/radio";
+@import "./7.vendors/_ant_message";
+
+
+
+
+@import "./6.theme/color-with-theme/light/light-blue";
+@import "./6.theme/color-with-theme/dark/dark-blue";
+@import "./6.theme/all-color/blue";
+@import "./6.theme/light";
+@import "./6.theme/dark";
+@import "./custom";
+
