--- a/src/scss/3.component/_PopularTopicsCard.scss
+++ b/src/scss/3.component/_PopularTopicsCard.scss
@@ -16,7 +16,7 @@
 
     &-title {
       font-size: 1.65rem;
-      color: $color-1;
+      color: $LightBlue-primary;
       font-weight: 600;
       margin-bottom: 0.2rem;
 
@@ -28,7 +28,7 @@
 
     &-description {
       font-size: 1.4rem;
-      color: $color-2;
+      color: $common_light_extra_color_7;
       font-weight: 500;
       margin-bottom: 0.8rem;
       //For Line Clip
@@ -41,18 +41,18 @@
     &-views {
       display: flex;
       align-items: center;
-      color: $color-1;
+      color: $LightBlue-primary;
 
       &-text{
         margin-left: .5rem;
-        color:$color-1;
+        color:$LightBlue-primary;
         font-weight: 600;
       }
     }
   }
 
   &_imagecontainer {
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.11);
     height: 12rem;
     width: 12rem;
     display: flex;
